# llm-tui

./: .gitignore  Cargo.toml
.kiro/specs/llm-tui-assistant/: design.md  requirements.md  tasks.md
legacy/: colors.py  prompt.txt
src/: app.rs  config.rs  conversation.rs  filesystem.rs  lib.rs  llm.rs  main.rs  rag.rs  ui.rs
